cap nhat dashboard

--- a/DashboardPage.html
+++ b/DashboardPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+padding-bottom: 30px; <!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
@@ -93,35 +93,37 @@
         }
         .table-container {
             width: 100%;
-            margin-top: 20px;
+            margin-top: -5px;
+            justify-content: flex-end; 
         }
         .custom-table {
             width: 98.5%;
             border-collapse: separate;
-            border-radius: 6px;
-            border: 1px solid #B9B9B9;
+            border-radius: 4px;
+            border: 0.5px solid #B9B9B9;
             border-spacing: 0;
             background-color: #FFFFFF;
+            margin-bottom: 40px;
         }
         .custom-table th, .custom-table td {
             padding: 12px;
             text-align: left;
-            border: 1px solid #B9B9B9;
+            border: 0.5px solid #B9B9B9;
         }
         .custom-table th:first-child {
-            border-top-left-radius: 5px;
+            border-top-left-radius: 3.5px;
         }
 
         .custom-table th:last-child {
-            border-top-right-radius: 5px;
+            border-top-right-radius: 3.5px;
         }
 
         .custom-table tr:last-child td:first-child {
-            border-bottom-left-radius: 5px;
+            border-bottom-left-radius: 3.5px;
         }
 
         .custom-table tr:last-child td:last-child {
-            border-bottom-right-radius: 5px;
+            border-bottom-right-radius: 3.5px;
         }
         .custom-table th {
             background-color: rgba(0, 0, 0, 0.06);
