--- a/ListUserPage.html
+++ b/ListUserPage.html
@@ -275,6 +275,8 @@
     left: 305px;
     border-radius: 4px;
     border: 0.5px solid rgba(204, 204, 204, 1);
+    border-bottom: none;
+    border: none !important;
   }
   
   .custom-table thead th {
@@ -289,24 +291,26 @@
   }
 
     .custom-table thead tr:first-child th:first-child {
-        border-top-left-radius: 3.5px;
+        border-top-left-radius: 4px;
     }
 
     .custom-table thead tr:first-child th:last-child {
-        border-top-right-radius: 3.5px;
+        border-top-right-radius: 4px;
     }
 
     .custom-table tbody tr:last-child td:first-child {
-        border-bottom-left-radius: 3.5px;
+        border-bottom-left-radius: 4px;
     }
 
     .custom-table tbody tr:last-child td:last-child {
-        border-bottom-right-radius: 3.5px;
+        border-bottom-right-radius: 4px;
     }
+
 
   .custom-table {
     width: 100%;
     border-spacing: 0; 
+    border: none !important;
   }
 
   .custom-table thead {
@@ -436,8 +440,8 @@
     position: absolute; 
     width: 489px;
     height: 38px;
-    top: 660px;
-    left: -30px;
+    top: 844px;
+    left: 290px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -529,7 +533,6 @@
     
     <!-- Container của bảng -->
   <div class="table-container">
-
     <table class="custom-table">
         <thead>
             <tr>
@@ -543,7 +546,7 @@
         </thead>
         <tbody>
             <tr>
-                <th><input type="checkbox" class="custom-checkbox"></th>
+                <td><input type="checkbox" class="custom-checkbox"></td>
                 <td>0001</td>
                 <td>Nguyễn Văn A</td>
                 <td>2025-01-01</td>
@@ -556,7 +559,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -569,7 +572,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -582,7 +585,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -595,7 +598,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -608,7 +611,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -621,7 +624,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -634,7 +637,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -647,7 +650,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -660,7 +663,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -673,7 +676,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -686,7 +689,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -699,7 +702,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -712,7 +715,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -725,7 +728,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -738,7 +741,7 @@
               </td>
             </tr>
             <tr>
-              <th><input type="checkbox" class="custom-checkbox"></th>
+              <td><input type="checkbox" class="custom-checkbox"></td>
               <td>0001</td>
               <td>Nguyễn Văn A</td>
               <td>2025-01-01</td>
@@ -749,27 +752,25 @@
                     <button class="delete-button">Xóa</button>
                 </div>
               </td>
-            </tr>
-            
+            </tr>     
         </tbody>
     </table>
-
-    <div class="pagination-container">
-      <table class="pagination-table">
-          <tr>
-              <td><button class="pagination-btn previous" disabled>← Previous</button></td>
-              <td><button class="pagination-btn active">1</button></td>
-              <td><button class="pagination-btn">2</button></td>
-              <td><button class="pagination-btn">3</button></td>
-              <td><span class="pagination-dots">...</span></td>
-              <td><button class="pagination-btn">67</button></td>
-              <td><button class="pagination-btn">68</button></td>
-              <td><button class="pagination-btn next">Next →</button></td>
-          </tr>
-      </table>
-    </div>
-
-
   </div>
+
+  <div class="pagination-container">
+    <table class="pagination-table">
+        <tr>
+            <td><button class="pagination-btn previous" disabled>← Previous</button></td>
+            <td><button class="pagination-btn active">1</button></td>
+            <td><button class="pagination-btn">2</button></td>
+            <td><button class="pagination-btn">3</button></td>
+            <td><span class="pagination-dots">...</span></td>
+            <td><button class="pagination-btn">67</button></td>
+            <td><button class="pagination-btn">68</button></td>
+            <td><button class="pagination-btn next">Next →</button></td>
+        </tr>
+    </table>
+  </div>
+
 </body>
 </html>
