--- a/AddDonPage.html
+++ b/AddDonPage.html
@@ -33,7 +33,6 @@
             position: absolute;
             top: 8px;
             left: 26px;
-            font-family: 'Noto Sans JP', sans-serif;
             font-weight: 700;
             font-size: 40px;
             line-height: 100%;
@@ -47,7 +46,6 @@
             position: absolute;
             top: 26px;
             left: 233px;
-            font-family: 'Noto Sans JP', sans-serif;
             font-weight: 400;
             font-size: 24px;
             line-height: 100%;
@@ -94,6 +92,259 @@
             font-weight: 700;
         }
 
+        .new-order-text {
+            width: 95px;
+            height: 17px;
+            position: absolute;
+            top: 96px;
+            left: 296px;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: rgba(0, 0, 0, 1);
+        }
+
+        .frame-1 {
+            width: 613px;
+            height: 40px;
+            position: absolute;
+            top: 171px;
+            left: 389px;
+            background-color: rgba(255, 255, 255, 1);
+        }
+
+        .frame-2 {
+            width: 613px;
+            height: 100px;
+            position: absolute;
+            top: 233px;
+            left: 389px;
+            background-color: rgba(255, 255, 255, 1);
+        }
+
+        .frame-3 {
+            width: 613px;
+            height: 62px;
+            position: absolute;
+            top: 355px;
+            left: 389px;
+            background-color: rgba(255, 255, 255, 1);
+        }
+
+        .frame-4 {
+            width: 613px;
+            height: 62px;
+            position: absolute;
+            top: 424px;
+            left: 389px;
+            background-color: rgba(255, 255, 255, 1);
+        }
+
+        .frame-5 {
+            width: 613px;
+            height: 40px;
+            position: absolute;
+            top: 493px;
+            left: 387px;
+            background-color: rgba(255, 255, 255, 1);
+        }
+
+        .frame-6 {
+            width: 613px;
+            height: 40px;
+            position: absolute;
+            top: 555px;
+            left: 387px;
+            background-color: rgba(255, 255, 255, 1);
+        }
+
+        .frame-7 {
+            width: 613px;
+            height: 40px;
+            position: absolute;
+            top: 617px;
+            left: 387px;
+            background-color: rgba(255, 255, 255, 1);
+        }
+
+        .title-text {
+            width: 100px;
+            height: 17px;
+            position: absolute;
+            top: 10px;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 100%;
+            letter-spacing: 0%;
+            color: rgba(0, 0, 0, 1);
+        }
+
+        .title-text span {
+            color: rgba(189, 1, 1, 1);
+        }
+
+        .input-text-1 {
+            width: 480px;
+            height: 38px;
+            position: absolute;
+            left: 129px; 
+            background-color: rgba(255, 255, 255, 0.5); 
+            border-radius: 4px; 
+            border: 1px solid rgba(204, 204, 204, 1); 
+        }
+
+        .input-text-2 {
+            width: 480px;
+            height: 94px;
+            position: absolute;
+            left: 129px;
+            background-color: rgba(255, 255, 255, 0.5); 
+            border-radius: 4px; 
+            border: 1px solid rgba(204, 204, 204, 1); 
+        }
+
+        .input-select {
+            width: 240px;
+            height: 40px;
+            position: absolute;
+            top: 2px;
+            left: 129px;
+            background-color: rgba(255, 255, 255, 0.5); 
+            border-radius: 4px; 
+            border: 1px solid rgba(204, 204, 204, 1); 
+            font-size: 14px;
+            padding-left: 10px;
+        }
+
+        .date-input {
+            width: 189px;
+            height: 40px;
+            position: absolute;
+            left: 123px;
+            top: 0px;
+            margin-left: 8px;
+            border-radius: 4px;
+            border: 1px solid rgba(204, 204, 204, 1);
+            background: rgba(255, 255, 255, 0.5);
+            padding-left: 10px;
+            font-size: 14px;
+            outline: none;
+        }
+
+        .date-icon-1 {
+            position: absolute;
+            right: 10px; 
+            top: 50%; 
+            transform: translateY(-50%);
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+            left: 305px;
+        }
+
+        .date-icon-2 {
+            position: absolute;
+            right: 10px; 
+            top: 50%; 
+            transform: translateY(-50%);
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+            left: 305px;
+        }
+
+        .input-text.date-input {
+            padding-right: 30px; 
+        }
+
+        .date-input::-webkit-calendar-picker-indicator {
+            display: none;
+        }
+
+        .input-file-wrapper {
+            position: relative;
+            width: 189px;
+            height: 40px;
+            left: 133px;
+        }
+
+        .input-file {
+            width: 100%;
+            height: 100%;
+            padding-left: 10px;
+            background-color: rgba(255, 255, 255, 0.5);
+            border-radius: 4px;
+            border: 1px solid rgba(204, 204, 204, 1);
+            color: transparent;
+            cursor: pointer;
+            position: relative;
+        }
+
+        .input-file::-webkit-file-upload-button {
+            display: none;
+        }
+
+        .icon-file-wrapper {
+            position: absolute;
+            top: 50%;
+            right: -8px; 
+            transform: translateY(-50%); 
+            pointer-events: none; 
+        }
+
+        .input-file-name {
+            position: absolute;
+            top: 50%;
+            left: 10px;
+            transform: translateY(-50%);
+            font-family: 'Noto Sans JP', sans-serif;
+            font-size: 14px;
+            color: rgba(0, 0, 0, 1); 
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        .footer {
+            width: 1920px;
+            height: 114px;
+            top: 780px;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+        }
+
+        .next-btn, .clear-btn {
+            width: 220px;
+            height: 50px;
+            border-radius: 4px;
+            padding-top: 4px;
+            padding-right: 24px;
+            padding-bottom: 4px;
+            padding-left: 24px;
+            border-width: 1px;
+            font-size: 16px;
+            font-weight: 400;
+            transform: translateX(-330px); 
+        }
+
+        .next-btn {
+            background:  rgba(0, 126, 198, 1);
+            border: 1px solid rgba(204, 204, 204, 1);
+            color: white;
+        }
+
+        .clear-btn {
+            background: rgba(226, 0, 92, 1);
+            border: 1px solid rgba(204, 204, 204, 1);
+            color: white;
+        }
+
   </style>
 </head>
 <body>
@@ -111,5 +362,104 @@
         </ul>
     </div>
 
+    <div class="new-order-text">Thêm mới đơn</div>
+
+    <div class="frame-1">
+        <div class="title-text">
+            Tiêu đề <span>*</span>
+        </div>
+        <input type="text" class="input-text-1" id = "title">
+    </div>
+    
+    <div class="frame-2">
+        <div class="title-text">
+            Nội dung
+        </div>
+        <input type="text" class="input-text-2" id="content">
+    </div>
+
+    <div class="frame-3">
+        <div class="title-text">
+            Người duyệt <span>*</span>
+        </div>
+        <select class="input-select" id="userAccept">
+            <option>Value</option>
+            <option>Value 1</option>
+            <option>Value 2</option>
+            <option>Value 3</option>
+        </select>
+    </div>
+
+    <div class="frame-4">
+        <div class="title-text">
+            Loại đơn <span>*</span>
+        </div>
+        <select class="input-select" id="typeDon">
+            <option>Value</option>
+            <option>Value 1</option>
+            <option>Value 2</option>
+            <option>Value 3</option>
+        </select>
+    </div>
+
+    <div class="frame-5">
+        <div class="title-text">
+            Ngày bắt đầu <span>*</span>
+        </div>
+        <div class="date-container">
+            <input type="date" class="date-input" id="dob-1">
+            <img src="path_to_your_icon.svg" class="date-icon-1" alt="Date Icon">
+        </div>
+    </div>
+
+    <div class="frame-6">
+        <div class="title-text">
+            Ngày kết thúc <span>*</span>
+        </div>
+        <div class="date-container">
+            <input type="date" class="date-input" id="dob-2" >
+            <img src="path_to_your_icon.svg" class="date-icon-2" alt="Date Icon">
+        </div>
+    </div>
+
+
+    </div> 
+
+    <div class="frame-7">
+        <div class="title-text">
+            Tải ảnh lên <span>*</span>
+        </div>
+
+        <div class="input-file-wrapper">
+            <input type="file" class="input-file" accept="image/*" onchange="displayFileName(this)" id="imageUpload"> 
+            <div class="icon-file-wrapper">
+                <img src="upload-icon.svg" alt="Upload Icon" class="upload-icon">
+            </div>
+            <div class="input-file-name"></div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <button class="next-btn">Tiếp theo</button>
+        <button class="clear-btn">Xóa trống</button>
+    </div>
+
 </body>
+    <script>
+
+        document.querySelector('.date-icon-1').addEventListener('click', function() {
+            document.getElementById('dob-1').showPicker();
+        });
+
+        document.querySelector('.date-icon-2').addEventListener('click', function() {
+            document.getElementById('dob-2').showPicker();
+        });
+
+        function displayFileName(input) {
+            var fileName = input.files[0] ? input.files[0].name: "";
+            var fileNameDisplay = input.nextElementSibling.nextElementSibling;
+            fileNameDisplay.textContent = fileName; 
+        }
+
+    </script>
 </html>
